# mutipleTurboModulesInApp

./: .clang-format  .gitignore  .gitmodules  App.tsx  package-lock.json  package.json
android/app/: build.gradle
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
ios/: Podfile  ViewmodelsProvider.h  ViewmodelsProvider.mm  link-assets-manifest.json
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/AwesomeProject/: Info.plist
ios/AwesomeProject.xcodeproj/: project.pbxproj
shared/: NativeViewModelA.cpp  NativeViewModelA.h  NativeViewModelB.cpp  NativeViewModelB.h  log.h
specs/: NativeViewModelA.ts  NativeViewModelB.ts
views/Minesweeper/: index.tsx
